@@ -25,9 +25,11 @@ THE SOFTWARE
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:Microsoft_Windows_Themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero"
-                    xmlns:Controls="clr-namespace:DW.WPFToolkit.Controls">
+                    xmlns:Controls="clr-namespace:DW.WPFToolkit.Controls"
+                    xmlns:Converters="clr-namespace:DW.WPFToolkit.Converters">
 
     <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+    <Converters:NullToVisibilityConverter x:Key="NullToVisibilityConverter" />
 
     <Style TargetType="{x:Type Controls:UpDownButton}">
         <Setter Property="Template">
@@ -170,7 +172,7 @@ THE SOFTWARE
                                                       DockPanel.Dock="{TemplateBinding UnitPosition}"
                                                       VerticalAlignment="Center"
                                                       Content="{TemplateBinding Unit}"
-                                                      Visibility="{TemplateBinding ShowUnit, Converter={StaticResource BooleanToVisibilityConverter}}"
+                                                      Visibility="{TemplateBinding Unit, Converter={StaticResource NullToVisibilityConverter}}"
                                                       AutomationProperties.AutomationId="CUI_UnitLabel" />
                             
                             <TextBox BorderThickness="0"
